<resources>
    <string name="app_name">WarScroll</string>
    <string name="action_settings">Settings</string>


    <!-- Strings used for fragments for navigation -->

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Strings para los nombres provisionales del menú-->

    <string name="menu_inicio">INICIO</string>
    <string name="menu_minis">MINIS</string>
    <string name="menu_favoritos">FAVS</string>
    <string name="menu_ajustes">AJUSTES</string>


    <!-- String para inputs -->

    <string name="input_usuario_correo">Introduzca su correo</string>
    <string name="input_usuario_password">Introduzca su contraseña</string>
    <string name="input_usuario_passwordrepetir">Introduzca su contraseña de nuevo</string>
    <string name="input_usuario_nombreusuario">Introduzca su usuario</string>


    <!-- Strings para el fragment login -->

    <string name="login_label">¿Ya tienes una cuenta?</string>
    <string name="login_boton_iniciar">Iniciar sesión</string>
    <string name="login_boton_registrar">Registrarse</string>


    <!-- Strings para el fragment register -->

    <string name="register_label">Crea tu cuenta</string>

    <string name="register_crear_cuenta">Crear cuenta</string>
    <string name="register_volver_login">Volver</string>


    <!-- Strings para el fragment ajustes -->

    <string name="perfil_boton_label">Ver Perfil</string>
    <string name="password_boton_label">Cambiar Contraseña</string>
    <string name="termino_boton_label">Términos y Condiciones</string>
    <string name="borrardatos_boton_label">Borrar Datos</string>
    <string name="cerrarsesion_boton_label">Cerrar Sesión</string>


    <!-- Strings para el fragment inicio -->
    <string name="inicio_bienvenida_label">Bienvenido,</string>
    <string name="inicio_boton_sabermas">Saber más</string>

    <string name="inicio_carta_conoce">Conoce</string>


    <!-- Strings para labels -->
    <string name="item_cantidad">Cantidad: </string>
    <string name="item_especie">Especie: </string>
    <string name="item_universo">Universo: </string>


    <!-- Strings para el fragment Warcry -->
    <string name="que_es_warcry">¿Qué es Warcry?</string>
    <string name="resumen_warcry"><b>Warcry</b> es un juego de escaramuzas para dos o más jugadores ambientado en Warhammer Age of Sigmar.\n
        \n
        Es un juego rápido y fácil de empezar a jugar. Tradicionalmente se juega entre 2 o más jugadores.\n
        \n
        Los tres estilos de juego característicos de Age of Sigmar están disponibles también en Warcry: el Matched Play (o “Juego combinado”) es el más competitivo y equilibrado, el Narrative pone a tu banda de guerra en el centro de la acción creando una historia en torno a sus hazañas, y el Open Play es el más flexible permitiendo también partidas multijugador.\n
        \n
        Para jugar necesitarás también un área adecuada cubierta por un tablero y algo de escenografía. Cualquier cosa puede servir, pero Games Workshop vende diferentes sets con tableros, fichas, escenografía y reglas adecuadas para jugar en ese entorno. Y por supuesto, necesitas dados y una regla (simplemente algo con lo que medir).\n
        \n
        Ahora comienza la fase de combate.\n
        \n
        El resto de la partida de Warcry se desarrolla como un “yo voy, tú vas”, donde los jugadores se alternan eligiendo un luchador a la vez. Cada luchador tiene 4 acciones disponibles: Mover, Atacar, Desengancharse y Esperar.\n
        \n
        Mover se utiliza para realizar movimientos, hay reglas especiales para escalar terreno o moverse a través de elementos como puertas o arcos, pero en pocas palabras, un luchador puede moverse X centímetros en cada acción, donde X es el valor de su característica de movimiento (más o menos cualquier modificador aplicado).\n
        \n
        Desengancharse es una acción que se puede realizar sólo cuando el luchador está a 3 centímetros de uno o más enemigos (las acciones de movimiento en ese caso no se pueden realizar). Ese combatiente intenta entonces alejarse 9 centímetros permaneciendo a más de 3 centímetros de cualquier combatiente enemigo. Si eso no es posible, entonces esta acción no puede ser utilizada.\n
        \n
        Esperar puede utilizarse como primera acción para saltarse un turno y volver a activar al mismo luchador en un momento posterior para esta última acción o puede utilizarse como segunda acción simplemente para terminar.\n
        \n
        El ataque es la acción que se utiliza para hacer daño a los enemigos. Cualquier modelo tiene uno o más perfiles de arma, éstos contienen el Alcance (a qué distancia puedes golpear a un enemigo), el número de Ataques, la Fuerza y el Daño (en un golpe normal y en un golpe crítico).\n
        \n
        Al atacar a un enemigo verifica que es visible y está dentro del alcance de esa arma, tira tantos dados como el valor de Ataque, luego compara el valor de Fuerza de esa arma contra el valor de Dureza del modelo enemigo.\n
        \n
        Si los dos valores son iguales, cada 4+ (es decir, un dado con un valor de 4 o más) resultará en un impacto, si la Fuerza es mayor entonces impactará con un 3+, mientras que si la Fuerza es menor impactará con un 5+. Un 6 es siempre un golpe crítico.\n
        \n
        Suma todo el daño dependiendo de si ha sido un golpe normal o crítico y eso es el número de heridas que hay que aplicar al modelo enemigo. Si el resultado lleva al adversario a un valor de heridas de 0 o menos, entonces se retira del juego.\n
        \n
        Cuando ambos jugadores terminan de reunir unidades, comienza la fase de combate. Los oponentes se turnan para dar órdenes (una orden puede ser un ataque, un movimiento o jugar una habilidad especial de la mano). Después de que ambos pasen sucesivamente, la batalla termina. Gana el jugador con más puntos de victoria (sumando la fuerza de las unidades supervivientes)\n
        \n
        Con estas pequeñas pautas a seguir podremos jugar una partida de Warcry, pero, en caso de querer profundizar acerca de las reglas generales del juego se pueden adquirir libros explicativos.
        
    </string>

    <!-- Strings para el fragment Killteam -->
    <string name="que_es_killteam">¿Qué es Killteam?</string>
    <string name="resumen_killteam"><b>Killteam</b> es un juego de escaramuzas para dos o más jugadores ambientado en Warhammer 40,000.\n
    \n
    Sus reglas básicas son las siguientes: en Kill Team, los jugadores controlan equipos de pocas miniaturas de las diferentes facciones que componen el juego principal,y se enfrentan entre sí en juegos de pequeña escala y corta duración.\n
    \n
    El juego tiene tanto una vertiente equilibrada, para jugar partidas independientes o de juego competitivo; como una narrativa, en la cual los operativos ascienden de nivel y obtienen mejoras y equipo a lo largo de una campaña.\n
    \n
    Gracias a que es un juego de menor tamaño y de fechas de publicación más espaciadas, permite que Games Workshop utilice Kill Team para lanzar nuevas miniaturas que ya existían en el trasfondo de Warhammer 40.000 pero cuyas miniaturas no podían ser incluidas en un juego de mayor tamaño, como lassiguientes:\n
    \n
    Corsarios Eldar; que nunca habían existido, Comerciantes Independientes, Hermanas de Batalla Novicias; o incluso nuevas incorporaciones al trasfondo, como el Kelermorfo o los Intercesores Pesados.\n
    \n
    \t 1- Movimiento: Los jugadores pueden mover a sus miniaturas por el campo de batalla utilizando reglas específicas de movimiento, como la distancia de movimiento permitida y las restricciones de terreno. El movimiento estratégico es esencial para controlar objetivos y establecer emboscadas.\n
    \n
    \t 2- Disparo: Los miembros del equipo pueden disparar a los enemigos utilizando armas de fuego, armas de energía u otras armas de rango. Se utilizan reglas de alcance, línea de visión y fuerza de las armas para determinar el éxito de los disparos y los daños infligidos.\n
    \n
    \t 3- Carga: Las miniaturas pueden cargar y atacar cuerpo a cuerpo a los enemigos en un intento de eliminarlos. El combate cuerpo a cuerpo se resuelve mediante tiradas de dados y utiliza características como la fuerza, la resistencia y las armas cuerpo a cuerpo de las miniaturas.\n
    \n
    \t 4- Psíquico: Algunas facciones tienen acceso a poderes psíquicos, que les permiten realizar acciones especiales utilizando su energía psíquica. Estas acciones pueden incluir dañar a los enemigos, proteger a los aliados o manipular el campo de batalla.\n
    \n
    \t 5- Interacción: Los jugadores también pueden realizar acciones de interacción, como abrir puertas, desactivar trampas o interactuar con objetivos específicos en el escenario. Estas acciones a menudo requieren una tirada de dado exitosa y pueden afectar el resultado de la partida.\n
    \n
    \t 6- Estrategia y tácticas: Además de las acciones individuales de las miniaturas, los jugadores pueden utilizar puntos de estrategia para activar tácticas especiales, como emboscadas, ataques coordinados o defensas mejoradas. Estas tácticas brindan ventajas adicionales y pueden cambiar el curso de la batalla.\n
    \n
    En general, Warhammer Kill Team es un juego rápido y dinámico que combina estrategia, táctica y acción en un formato de juego de miniaturas compacto. Los jugadores deben utilizar habilidades tácticas, tomar decisiones estratégicas y aprovechar las fortalezas de su equipo para lograr la victoria en cada misión.
    </string>





    <!-- String para el copyrigth de la aplicación -->

    <string name="copyrigth">© 2023 WarScroll. Todos los derechos reservados. </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>