<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MenuFragment"
    android:background="@color/color1"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/boton_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="20dp"
            android:src="@drawable/icono_inicio"
            android:text="@string/menu_inicio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/estado_boton_inicio"
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@color/color5"
            tools:visibility="invisible" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/boton_minis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="20dp"
            android:src="@drawable/icono_minis"
            android:text="@string/menu_minis"
            app:layout_constraintStart_toEndOf="@+id/boton_inicio"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/estado_boton_minis"
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@color/color5"
            tools:visibility="invisible" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout5"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/boton_favoritos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="20dp"
            android:src="@drawable/icono_favoritos"
            android:text="@string/menu_favoritos"
            app:layout_constraintStart_toEndOf="@+id/boton_minis"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/estado_boton_favoritos"
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@color/color5"
            tools:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/boton_ajustes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="20dp"
            android:src="@drawable/icono_ajustes"
            android:text="@string/menu_ajustes"
            app:layout_constraintStart_toEndOf="@+id/boton_favoritos"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/estado_boton_ajustes"
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@color/color5"
            tools:visibility="invisible" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/color5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>