<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="20dp"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/item_imagen"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_nombre"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text=""
            android:fontFamily="@font/kanit_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_imagen"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/label_especie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/item_especie"
            android:textStyle="bold"
            android:fontFamily="@font/kanit_regular"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_imagen"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_especie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="-"
            app:layout_constraintBottom_toBottomOf="@+id/label_especie"
            app:layout_constraintStart_toEndOf="@+id/label_especie"
            app:layout_constraintTop_toTopOf="@+id/label_especie" />

        <TextView
            android:id="@+id/label_universo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/item_universo"
            android:textStyle="bold"
            android:fontFamily="@font/kanit_regular"
            app:layout_constraintEnd_toEndOf="@+id/label_especie"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/label_especie"
            app:layout_constraintTop_toBottomOf="@+id/label_especie" />

        <TextView
            android:id="@+id/text_universo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="-"
            app:layout_constraintBottom_toBottomOf="@+id/label_universo"
            app:layout_constraintStart_toEndOf="@+id/label_universo"
            app:layout_constraintTop_toTopOf="@+id/label_universo" />

        <TextView
            android:id="@+id/label_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/item_cantidad"
            android:textStyle="bold"
            android:fontFamily="@font/kanit_regular"
            app:layout_constraintBottom_toBottomOf="@+id/text_especie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_especie" />

        <TextView
            android:id="@+id/text_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="@+id/label_cantidad"
            app:layout_constraintStart_toEndOf="@+id/label_cantidad"
            app:layout_constraintTop_toTopOf="@+id/label_cantidad" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>