<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/dialogo_perfil_imagen"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/dialogo_perfil_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/kanit_regular"
            android:text=""
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialogo_perfil_especie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/kanit_regular"
            android:textAlignment="center"
            android:text=""
            app:layout_constraintEnd_toStartOf="@+id/dialogo_perfil_imagen"
            app:layout_constraintStart_toEndOf="@+id/dialogo_label_especie"
            app:layout_constraintTop_toBottomOf="@+id/dialogo_perfil_nombre" />

        <TextView
            android:id="@+id/dialogo_perfil_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:fontFamily="@font/kanit_regular"
            android:text=""
            app:layout_constraintStart_toStartOf="@+id/dialogo_perfil_especie"
            app:layout_constraintTop_toBottomOf="@+id/dialogo_perfil_especie" />

        <TextView
            android:id="@+id/dialogo_perfil_universo"
            android:layout_width="300px"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/kanit_regular"
            android:text=""
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dialogo_perfil_imagen"
            app:layout_constraintTop_toBottomOf="@+id/dialogo_perfil_cantidad" />

        <TextView
            android:id="@+id/dialogo_label_especie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/kanit_regular"
            android:textStyle="bold"
            android:text="@string/item_especie"
            app:layout_constraintBottom_toBottomOf="@+id/dialogo_perfil_especie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dialogo_perfil_especie" />

        <TextView
            android:fontFamily="@font/kanit_regular"
            android:id="@+id/dialogo_label_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_cantidad"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/dialogo_perfil_cantidad"
            app:layout_constraintEnd_toEndOf="@+id/dialogo_label_especie"
            app:layout_constraintStart_toStartOf="@+id/dialogo_label_especie"
            app:layout_constraintTop_toTopOf="@+id/dialogo_perfil_cantidad" />

        <TextView
            android:fontFamily="@font/kanit_regular"
            android:id="@+id/dialogo_label_universo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_universo"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/dialogo_perfil_universo"
            app:layout_constraintEnd_toEndOf="@+id/dialogo_label_cantidad"
            app:layout_constraintStart_toStartOf="@+id/dialogo_label_cantidad"
            app:layout_constraintTop_toTopOf="@+id/dialogo_perfil_universo" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>